[gd_scene load_steps=9 format=3 uid="uid://cjl273pvm5ydo"]

[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Team Editor.gd" id="1_v8esq"]
[ext_resource type="Texture2D" uid="uid://cdkp3cl6rfyra" path="res://Images/icon.svg" id="2_q2jd6"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Misc Scripts/Logo.gd" id="3_yrcmb"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Misc Scripts/Team Name.gd" id="4_kfda0"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Misc Scripts/Team ID.gd" id="5_f6c14"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Misc Scripts/Name Code Input.gd" id="6_ufmqb"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Misc Scripts/City Input.gd" id="7_1e47m"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/Team Editor/Misc Scripts/SpinBox.gd" id="8_e66ls"]

[node name="TeamEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8esq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0823529, 0.0941176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title Bar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GoBackButton" type="Button" parent="VBoxContainer/Title Bar"]
layout_mode = 2
text = "<- Go Back to Menu"

[node name="FileName" type="Label" parent="VBoxContainer/Title Bar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Editor Bar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="Country List" type="ItemList" parent="VBoxContainer/Editor Bar"]
layout_mode = 2
size_flags_horizontal = 3
fixed_icon_size = Vector2i(75, 25)

[node name="Middle" type="VBoxContainer" parent="VBoxContainer/Editor Bar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Editor Bar/Middle"]
layout_mode = 2
size_flags_vertical = 3

[node name="Logo" type="TextureButton" parent="VBoxContainer/Editor Bar/Middle/HBoxContainer" groups=["Team_Info"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_q2jd6")
stretch_mode = 0
script = ExtResource("3_yrcmb")

[node name="Team Name" type="LineEdit" parent="VBoxContainer/Editor Bar/Middle/HBoxContainer" groups=["Team_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Team Name"
alignment = 1
max_length = 50
clear_button_enabled = true
script = ExtResource("4_kfda0")

[node name="Team ID" type="Label" parent="VBoxContainer/Editor Bar/Middle/HBoxContainer" groups=["Team_Info"]]
layout_mode = 2
size_flags_horizontal = 3
text = "ID: 0"
horizontal_alignment = 1
script = ExtResource("5_f6c14")

[node name="Team Edit Area" type="GridContainer" parent="VBoxContainer/Editor Bar/Middle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
columns = 2

[node name="DisplayName" type="Label" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
text = "Display Name"
horizontal_alignment = 1

[node name="DisplayNameInput" type="LineEdit" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
text = "Display Name Input"
alignment = 1
max_length = 50
clear_button_enabled = true

[node name="NickName" type="Label" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
text = "Nick Name"
horizontal_alignment = 1

[node name="NickNameInput" type="LineEdit" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
text = "Nick Name Input"
alignment = 1
max_length = 30
clear_button_enabled = true

[node name="Name Code" type="Label" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name Code"
horizontal_alignment = 1
uppercase = true

[node name="Name Code Input" type="LineEdit" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area" groups=["Team_Info"]]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
max_length = 4
clear_button_enabled = true
script = ExtResource("6_ufmqb")

[node name="City" type="Label" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
text = "City"
horizontal_alignment = 1
uppercase = true

[node name="City Input" type="LineEdit" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area" groups=["Team_Info"]]
layout_mode = 2
text = "City Name"
alignment = 1
max_length = 30
clear_button_enabled = true
script = ExtResource("7_1e47m")

[node name="Rating" type="Label" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area"]
layout_mode = 2
text = "Rating"
horizontal_alignment = 1
uppercase = true

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Editor Bar/Middle/Team Edit Area" groups=["Team_Info"]]
layout_mode = 2
max_value = 75.0
rounded = true
alignment = 1
update_on_text_changed = true
script = ExtResource("8_e66ls")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Editor Bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Editor Bar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Add Team" type="Button" parent="VBoxContainer/Editor Bar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Team"

[node name="Delete Team" type="Button" parent="VBoxContainer/Editor Bar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete team"

[node name="Team List" type="ItemList" parent="VBoxContainer/Editor Bar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
fixed_icon_size = Vector2i(75, 75)

[node name="Delete Team Confirmation" type="ConfirmationDialog" parent="."]
initial_position = 2
dialog_text = "Are you sure you want to delete?"

[node name="Logo File Dialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="pressed" from="VBoxContainer/Title Bar/GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/Editor Bar/Country List" to="." method="_on_country_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/Editor Bar/Middle/HBoxContainer/Logo" to="." method="_on_logo_pressed"]
[connection signal="text_changed" from="VBoxContainer/Editor Bar/Middle/HBoxContainer/Team Name" to="." method="_on_team_name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Editor Bar/Middle/Team Edit Area/Name Code Input" to="." method="_on_name_code_input_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Editor Bar/Middle/Team Edit Area/City Input" to="." method="_on_city_input_text_changed"]
[connection signal="value_changed" from="VBoxContainer/Editor Bar/Middle/Team Edit Area/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/Editor Bar/VBoxContainer/HBoxContainer/Add Team" to="." method="_on_add_team_pressed"]
[connection signal="pressed" from="VBoxContainer/Editor Bar/VBoxContainer/HBoxContainer/Delete Team" to="." method="_on_delete_team_pressed"]
[connection signal="item_selected" from="VBoxContainer/Editor Bar/VBoxContainer/Team List" to="." method="_on_team_list_item_selected"]
[connection signal="confirmed" from="Delete Team Confirmation" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="file_selected" from="Logo File Dialog" to="." method="_on_logo_file_dialog_file_selected"]
